force-app/main/default/objects/Flagship_Store__c/Flagship_Store__c.object-meta.xml
<CustomObject>
    <label>플래그십 스토어</label>
    <nameField>
        <label>플래그십 스토어 이름</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>플래그십 스토어</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>