force-app/main/default/objects/Flagship_Store__c/fields/AvailableMethod__c.field-meta.xml
<CustomField>
    <fullName>AvailableMethod__c</fullName>
    <label>시승 방법</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Staff</fullName>
            </value>
            <value>
                <fullName>Self</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>