force-app/main/default/objects/Flagship_Store__c/fields/AvailableModles__c.field-meta.xml
<CustomField>
    <fullName>AvailableModles__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>시승 가능 모델</label>
    <referenceTo>VehicleModel__c</referenceTo>
    <relationshipLabel>플래그십 스토어</relationshipLabel>
    <relationshipName>FlagshipStore</relationshipName>
    <type>Lookup</type>
</CustomField>