force-app/main/default/objects/Flagship_Store__c/fields/Closing_Time__c.field-meta.xml
<CustomField>
    <fullName>Closing_Time__c</fullName>
    <label>영업 종료 시간</label>
    <type>Time</type>
</CustomField>