force-app/main/default/objects/Flagship_Store__c/fields/Opening_Time__c.field-meta.xml
<CustomField>
    <fullName>Opening_Time__c</fullName>
    <label>영업 시작 시간</label>
    <type>Time</type>
</CustomField>