force-app/main/default/objects/Flagship_Store__c/fields/Road_name__c.field-meta.xml
<CustomField>
    <fullName>Road_name__c</fullName>
    <description>도로명주소 값</description>
    <label>도로명 주소</label>
    <length>255</length>
    <type>Text</type>
</CustomField>