force-app/main/default/objects/Flagship_Store__c/fields/Store_Location__c.field-meta.xml
<CustomField>
    <fullName>Store_Location__c</fullName>
    <description>플래그십 스토어 위도, 경도 표시</description>
    <label>플래그십 위치</label>
    <scale>8</scale>
    <type>Location</type>
</CustomField>